<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicio_parte_1">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/txtInstruccion"
            android:textSize="25sp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <RadioGroup
            android:id="@+id/rgFrutas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="110dp">

            <RadioButton
                android:id="@+id/rbMango"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbMango"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbPlatano"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbPlatano"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbMelon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbMelon"
                android:textSize="20sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvPrecioMango"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="28dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@+id/rgFrutas"
            android:text="@string/precioMango"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvPrecioPlatano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPrecioMango"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/rgFrutas"
            android:text="@string/precioPlatano"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvPrecioMelon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPrecioPlatano"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/rgFrutas"
            android:text="@string/precioMelon"
            android:textColor="#000"
            android:textSize="20sp" />


    </RelativeLayout>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="250dp"
        android:layout_height="25dp"
        style="@style/SeekBarCustomStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txtCantidadFruta"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>